--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,71 @@
 # Node.js
 node_modules/
-.env
-.env.*
-*.log
+jspm_packages/
+
+# Build output
 dist/
 build/
-.DS_Store
+out/
+
+# Environment files
+.env
+.env.*
+*.local
+
+# Logs
+logs/
+log/
+*.log
+*.log.*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-coverage/
-logs/
+pnpm-debug.log*
+lerna-debug.log*
+
+# Process IDs
 pids/
 *.pid
 *.seed
 *.pid.lock
+
+# Editor directories and files
 .idea/
 .vscode/
 *.sublime-workspace
 *.sublime-project
 
-# OS
+# Coverage
+coverage/
+
+# OS generated files
+.DS_Store
 Thumbs.db
 Desktop.ini
+$RECYCLE.BIN/
+.Trash-*/
+.Spotlight-V100
+.fseventsd
+.AppleDouble
+.LSOverride
 
 # Misc
 *.tgz
 *.swp
+*.bak
+*.tmp
+*.temp
 
-# Optional: ignore test output
+# npm package lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Test output
 /test-output/
+
+# Optional: ignore database files
+*.sqlite
+*.sqlite3
+*.db
+*.db-journal
