--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed": "node scripts/seedData.js",
+    "seed:productos": "node scripts/seedProductos.js",
+    "seed:backlog": "node scripts/seedBacklog.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
