fix: corregir problemas de despliegue en Render y lógica de usuarios
- Corregir variable 'token' no definida en RoleContext.jsx
- Optimizar conexión a MongoDB para producción
- Cambiar main entry point a server.js
- Agregar endpoint de test /api/test
- Crear guía RENDER_FIX.md para solucionar problemas de 404
- Actualizar scripts de verificación de conectividad

--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "check-deployment": "node scripts/check-deployment.js",
+    "test-users": "node scripts/test-user-integration.js",
+    "test-connectivity": "node scripts/test-connectivity.js",
     "seed": "node scripts/seedData.js",
     "seed:productos": "node scripts/seedProductos.js",
     "seed:backlog": "node scripts/seedBacklog.js",
